--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix-sources.jar"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/CTRE_Phoenix.jar"/>
+	<classpathentry kind="lib" path="build/jars/cscore.jar"/>
+	<classpathentry kind="lib" path="build/jars/CTRE_Phoenix.jar"/>
+	<classpathentry kind="lib" path="build/jars/ntcore.jar"/>
+	<classpathentry kind="lib" path="build/jars/opencv.jar"/>
+	<classpathentry kind="lib" path="build/jars/WPILib.jar"/>
+	<classpathentry kind="lib" path="build/jars/wpiutil.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
